add profile values in forms like dob and other already

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -10006,6 +10006,9 @@ button.crdoLghtBlu2 {
   border-bottom: none;
 }
 /* Added by Ankita */
+.setDetail-eval {
+  padding: 15px;
+}
 .ElementsApp,
 .ElementsApp .InputElement {
   color: #00abaf;
