All changes on picture evaluation send feedback and status update all

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -14463,9 +14463,10 @@ label.newrole {
   border-radius: 15px;
   margin-right: 8px;
 }
-
 .dataCommentBor {
-  border-bottom: 1px solid #787878;
-  padding-bottom: 8px;
-  padding-top: 5px;
+  padding: 10px;
+  background: #ddd;
+  margin: 10px 0px;
+  border-radius: 5px;
+  color: #000 !important;
 }
