--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -14470,3 +14470,7 @@ label.newrole {
   border-radius: 5px;
   color: #000 !important;
 }
+
+.presOpinionIner1 Thead Th {
+  padding: 16px 6px !important;
+}
