--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -10064,7 +10064,7 @@ button.crdoLghtBlu2 {
 }
 
 .homeBgDrk .payment_sec_extra_ser1, .homeBgDrk .setPaymentBack {
-  background: #e1f7f7 !important;
+  background: #404646 !important;
 }
 @media (max-width: 959px) {
   .vh-section .prfilHghtLft p span,
