Worked On Some Changes for getting App work === Web work

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -14503,3 +14503,8 @@ label.newrole {
 .presOpinionIner1 Thead Th {
   padding: 16px 6px !important;
 }
+
+
+.fatiqueQuesabc  .MuiGrid-container{
+  margin-bottom: 0px!important;
+}
