Worked on Jirra issues

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -14508,3 +14508,14 @@ label.newrole {
 .fatiqueQuesabc  .MuiGrid-container{
   margin-bottom: 0px!important;
 }
+
+.ant-picker-clear{
+  right: 23px!important;
+}
+
+                       
+                       
+
+.cnfrmDiaMain .fillDia .rrSysto123 div{
+  margin-bottom: 0px!important;
+}
